--- a/2020/creditCards/package.json
+++ b/2020/creditCards/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/core": "^7.2.16",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
@@ -24,7 +24,8 @@
     "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
-    "mongoose": "^5.6.4",
+    "mongod": "^2.0.0",
+    "mongoose": "^5.12.0",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1",
     "ng2-dnd": "^5.0.2",
